# backend/app/Http/Requests/Auth/ResetPasswordRequest.php
@@ -1,0 +1,12 @@
+<?php
+
+namespace App\Http\Requests\Auth;
+
+use Illuminate\Contracts\Validation\ValidationRule;
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Validation\Rules\Password as PasswordRule;
+
+class ResetPasswordRequest extends FormRequest
+{
+    
+}
